# rs_sketch

./: .gitignore
cs_getinfo/: Cargo.toml  README.md
cs_getinfo/src/: client.rs  server.rs
minigrep/src/: lib.rs  main.rs
simple_redis_1/: Cargo.toml  README.md
simple_redis_1/mcp-test/: charts.html  projects.html  repos.json
simple_redis_1/src/: main.rs
simple_web_mutil_thread/: Cargo.toml  README.md
simple_web_mutil_thread/src/: lib.rs  main.rs
simple_web_one_thread/: 404.html  Cargo.toml
simple_web_one_thread/src/: main.rs
